<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rajani.helloandroid.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/lin_layout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/image_background">

            <ImageView
                android:id="@+id/udacity_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_title"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/udacity_logo"
                />

            <TextView
                android:id="@+id/tv_jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_anim"
                android:layout_marginBottom="@dimen/padding_title"
                android:text="@string/jobs_tomorrow"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_anim" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_nanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_title"
            android:text="@string/nanos"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_title" />

        <LinearLayout
            android:id="@+id/lin_layout_nanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_android_dev"
                style="@style/MyTextViewStyle1"
                android:drawableTop="@drawable/android_developer"
                android:text="@string/android_nano" />

            <TextView
                android:id="@+id/tv_full_stack_dev"
                style="@style/MyTextViewStyle1"
                android:drawableTop="@drawable/full_stack_web_developer"
                android:text="@string/full_stack_nano" />

            <TextView
                android:id="@+id/tv_mobile_dev"
                style="@style/MyTextViewStyle1"
                android:drawableTop="@drawable/web_developer"
                android:text="@string/web_nano" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_anim"
            android:background="@color/colorDarkGray"
            android:layout_marginBottom="@dimen/padding_title"
            />

        <TextView
            android:id="@+id/tv_name"
            style="@style/MyTextViewStyle2"
            android:textColor="@color/colorLightBlue"
            android:textStyle="bold"
            android:drawableStart="@drawable/udacity_logo3"
            android:layout_marginBottom="@dimen/padding_title"
            android:text="@string/udacity"
            android:textSize="@dimen/text_anim"
            android:layout_marginTop="@dimen/margin_card_top"
            android:drawablePadding="@dimen/zero"
            />

        <TextView
            android:id="@+id/tv_phone"
            style="@style/MyTextViewStyle2"
            android:text="@string/phone"
            android:drawableStart="@drawable/phone_number"
            android:textColorLink="@color/colorDarkGray"
            android:autoLink="phone"
            />

        <TextView
            android:id="@+id/tv_website"
            style="@style/MyTextViewStyle2"
            android:text="@string/udacity_website"
            android:drawableStart="@drawable/website"
            android:autoLink="web"
            android:textColorLink="@color/colorDarkGray"
            />

        <TextView
            android:id="@+id/tv_address"
            style="@style/MyTextViewStyle2"
            android:text="@string/address"
            android:drawableStart="@drawable/address"
            android:autoLink="map"
            android:textColorLink="@color/colorDarkGray"
            />

    </LinearLayout>

</ScrollView>

